# openlense

./: .gitignore  README.md
apps/backend/: .env.example  README.md  pyproject.toml  requirements.txt
apps/backend/src/: main.py  types.py
apps/backend/src/core/: config.py
apps/backend/src/db/: database.py  schemas.py  sources.py
apps/backend/src/models/: search.py  sources.py
apps/backend/src/routers/: filters.py  search.py  sources.py
apps/backend/src/services/: http_client.py  request_builder.py  search.py  sources.py
apps/backend/src/utils/: data.py  fields_mapping.py  filtering_engine.py  http.py
apps/backend/src/utils/filtering/: handlers.py
apps/frontend/: .prettierrc  Dockerfile  README.md  eslint.config.mjs  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.mjs
apps/frontend/public/: index.html
apps/frontend/src/: index.tsx  routeTree.gen.ts
apps/frontend/src/components/: CronSetup.tsx  EmptyState.tsx  FieldMappingTable.tsx  FilterForm.tsx  FiltersConfig.tsx  Header.tsx  InputField.tsx  JsonEditor.tsx  Pagination.tsx  ResultsTable.tsx  ResultsViewToggle.tsx  SortDropdown.tsx  SourceSelector.tsx  SourcesList.tsx
apps/frontend/src/layouts/: MainLayout.tsx
apps/frontend/src/mocks/: searchMocks.ts
apps/frontend/src/routes/: __root.tsx  admin.tsx  index.tsx  knowledge-base.tsx
apps/frontend/src/services/: apiClient.ts  queryClient.ts  search.ts  sources.ts
apps/frontend/src/types/: api.ts  common.ts  search.ts
